 cnp-egress-pci-dss-1.2.3-block-cardholder-data-over-internet-dfqfoyd.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-egress-pci-dss-1.2.3-block-cardholder-data-over-internet-ocq8f67
  namespace: kube-system
spec:
  description: "do not allow direct connection outbound between cardholder to internet"
  endpointSelector: 
    matchLabels:
      pod-template-hash: 599484b884
      k8s-app: kube-dns
  egress:
    - toEntities:
        - cluster
    - toEndpoints:
        - matchLabels:
  namespace: kube-system
